--- a/app/views/movies/search.html.erb
+++ b/app/views/movies/search.html.erb
@@ -5,3 +5,13 @@
       <p><%= link_to "Sign Up To Write A Review", new_user_registration_path, class: "btn btn-primary btn-lg" %></p>
     </div>
 <% end %>
+
+<div class="row">
+  <% @movies.each do |movie| %>
+      <div class="col-sm-6 col-md-3">
+        <div class="thumbnail">
+          <%= link_to (image_tag movie.image.url(:medium), class: 'image'), movie %>
+        </div>
+      </div>
+  <% end %>
+</div>
