--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -27,3 +27,13 @@
 
 <%= link_to 'Edit', edit_movie_path(@movie) %> |
 <%= link_to 'Back', movies_path %>
+
+<script>
+  $('.star-rating').raty({
+    path: '/assets/',
+    readOnly: true,
+    score: function() {
+      return $(this).attr('data-score');
+    }
+  })
+</script>
