--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -46,6 +46,7 @@
                   <div class="star-rating" data-score= <%= review.rating %></div>
                     <p><%= review.comment %></p>
                   </div>
+                </div>
             <% end %>
         <% end %>
         </div>
