--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,6 +16,10 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+
+$white_opaque: rgba(250, 250, 250, .3);
+$dark: #1F7972;
+
 body {
   background: -webkit-linear-gradient(40deg, #4CB8C4 10%, #EAECC6 100%);
   background:    -moz-linear-gradient(40deg, #4CB8C4 10%, #EAECC6 100%);
@@ -35,4 +39,19 @@ body {
 .star-rating {
     padding-bottom: 8px;
 }
+  #notice {
+    text-align: center;
+    font-size: 0.6em;
+    color: $dark;
+    font-weight: 100;
+    border: 1px solid white_opaque;
+    padding: .5em 1em;
+    border-radius: 5px;
+    display: block;
+    margin: 1em 25%;
+  }
+
+
 }
+
+::-webkit-input-placeholder { color: $dark; }
