--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -39,7 +39,7 @@
 
         <% if @reviews.blank? %>
             <h3>No reviews just yet, would you like to add the first?</h3>
-            <%= link_to "Write Review", new_movie_review_path(@movie), class: "btn btn-danger" %>
+            <%= link_to "Write Review", new_movie_review_path(@movie), class: "btn btn-primary" %>
         <% else %>
             <% @reviews.each do |review| %>
                 <div class="reviews">
