--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -20,6 +20,10 @@
 $white_opaque: rgba(250, 250, 250, .3);
 $dark: #1F7972;
 
+html {
+  height: 100%;
+}
+
 body {
   background: -webkit-linear-gradient(40deg, #4CB8C4 10%, #EAECC6 100%);
   background:    -moz-linear-gradient(40deg, #4CB8C4 10%, #EAECC6 100%);
@@ -70,6 +74,17 @@ input[type="submit"] {
     color: white;
   }
 }
+.inputField input[type="text"], textarea {
+  width: 100%;
+  margin: .5em 2% 1em 0;
+  display: inline-block;
+  outline: none;
+  background: rgba(250,250,250,.4);
+  border: none;
+  height: 40px;
+  border-radius: 4px;
+  padding: 1em 2em;
+}
 
 .submitButton {
   background: white;
@@ -95,7 +110,7 @@ input[type="submit"] {
   display: block;
   margin: 1.5em auto 0 auto;
   text-align: center;
-  font-size: 0.8em;
+  font-size: 1.5em;
   color: white;
   a {
     color: white;
