--- a/app/views/movies/_form.html.erb
+++ b/app/views/movies/_form.html.erb
@@ -10,31 +10,33 @@
           </ul>
         </div>
     <% end %>
+    <div class="inputField">
+      <div class="field">
+        <%= f.label :title %><br>
+        <%= f.text_field :title %>
+      </div>
+      <div class="field">
+        <%= f.label :description %><br>
+        <%= f.text_area :description %>
+      </div>
+      <div class="field">
+        <%= f.label :movie_length %><br>
+        <%= f.text_field :movie_length %>
+      </div>
+      <div class="field">
+        <%= f.label :director %><br>
+        <%= f.text_field :director %>
+      </div>
+      <div class="field">
+        <%= f.label :rating %><br>
+        <%= f.text_field :rating %>
+      </div>
+      <div class="field">
+        <%= f.label :image %><br>
+        <%= f.file_field :image %>
+      </div>
+    </div>
 
-    <div class="field">
-      <%= f.label :title %><br>
-      <%= f.text_field :title %>
-    </div>
-    <div class="field">
-      <%= f.label :description %><br>
-      <%= f.text_area :description %>
-    </div>
-    <div class="field">
-      <%= f.label :movie_length %><br>
-      <%= f.text_field :movie_length %>
-    </div>
-    <div class="field">
-      <%= f.label :director %><br>
-      <%= f.text_field :director %>
-    </div>
-    <div class="field">
-      <%= f.label :rating %><br>
-      <%= f.text_field :rating %>
-    </div>
-    <div class="field">
-      <%= f.label :image %><br>
-      <%= f.file_field :image %>
-    </div>
     <div class="actions">
       <%= f.submit %>
     </div>
