--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -10,16 +10,17 @@
           </ul>
         </div>
     <% end %>
-
-    <div class="field">
-      <div id="star-rating"></div>
-    </div>
-    <div class="field">
-      <%= f.label :comment %><br>
-      <%= f.text_area :comment %>
-    </div>
-    <div class="actions">
-      <%= f.submit %>
+    <div class="inputField">
+      <div class="field">
+        <div id="star-rating"></div>
+      </div>
+      <div class="field">
+        <%= f.label :comment %><br>
+        <%= f.text_area :comment %>
+      </div>
+      <div class="actions">
+        <%= f.submit %>
+      </div>
     </div>
 <% end %>
 
