--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -86,6 +86,28 @@ input[type="submit"] {
   border-radius: 4px;
   padding: 1em 2em;
 }
+.inputField input[type="password"], textarea {
+  width: 100%;
+  margin: .5em 2% 1em 0;
+  display: inline-block;
+  outline: none;
+  background: rgba(250,250,250,.4);
+  border: none;
+  height: 40px;
+  border-radius: 4px;
+  padding: 1em 2em;
+}
+.inputField input[type="email"], textarea {
+  width: 100%;
+  margin: .5em 2% 1em 0;
+  display: inline-block;
+  outline: none;
+  background: rgba(250,250,250,.4);
+  border: none;
+  height: 40px;
+  border-radius: 4px;
+  padding: 1em 2em;
+}
 
 .inputField input[type="file"]{
   margin: .5em 2% 1em 0;
@@ -99,6 +121,9 @@ label {
 }
 
 h1 {
+  color: $dark;
+}
+h2 {
   color: $dark;
 }
 
