--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -22,7 +22,7 @@
       </ul>
       <%= form_tag search_movies_path, method: :get, class: "navbar-form navbar-right", role: "search" do %>
           <p>
-            <%= text_field_tag :search, params[:search], class: "form-control" placeholder: "Find a movie... [DISABLED] " disabled%>
+            <%= text_field_tag :search, params[:search], class: "form-control" %>
             <%= submit_tag "Search", name: nil, class: "btn btn-default" %>
           </p>
       <% end %>
