--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -30,14 +30,16 @@
             </tr>
             </tbody>
           </table>
-          <%= link_to "Write a Review", new_movie_review_path(@movie), class: "submitButton" %>
+          <% if logged_in? %>
+               <%= link_to "Write a Review", new_movie_review_path(@movie), class: "submitButton" %>
+          <% end %>
         </div>
       </div>
       <div class="col-md-7 col-md-offset-1">
         <h1 class="review_title"><%= @movie.title %></h1>
         <p><%= @movie.description %></p>
 
-        <% if @reviews.blank? %>
+        <% if logged_in? and @reviews.blank? %>
             <h3>No reviews just yet, would you like to add the first?</h3>
             <%= link_to "Write Review", new_movie_review_path(@movie), class: "btn btn-primary" %>
         <% else %>
@@ -54,9 +56,12 @@
     </div>
   </div>
 <div class="links">
-  <%= link_to 'Edit', edit_movie_path(@movie) %> |
-  <%= link_to 'Back', movies_path %> |
-  <%= link_to 'Delete', movie_path(@movie), method: :delete, data: { confirm: "Are you sure?" } %>
+  <% if logged_in? and (@movie.user == current_user) %>
+      <%= link_to 'Edit', edit_movie_path(@movie) %> |
+      <%= link_to 'Delete', movie_path(@movie), method: :delete, data: { confirm: "Are you sure?" } %> |
+  <%end%>
+  <%= link_to 'Back', movies_path %>
+
 </div>
   <script>
     $('.star-rating').raty({
