Added more animation and added panel and glyphicons instead of text url for option list

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -8,30 +8,30 @@
         <div class="table-responsive">
           <table class="table">
             <tbody>
-            <tr>
-              <td><strong>Title:</strong></td>
-              <td><%= @movie.title %></td>
-            </tr>
-            <tr>
-              <td><strong>Description:</strong></td>
-              <td><%= @movie.description %></td>
-            </tr>
-            <tr>
-              <td><strong>Movie Length:</strong></td>
-              <td><%= @movie.movie_length %></td>
-            </tr>
-            <tr>
-              <td><strong>Director:</strong></td>
-              <td><%= @movie.director %></td>
-            </tr>
-            <tr>
-              <td><strong>Rating:</strong></td>
-              <td><%= @movie.rating %></td>
-            </tr>
+              <tr>
+                <td><strong>Title:</strong></td>
+                <td><%= @movie.title %></td>
+              </tr>
+              <tr>
+                <td><strong>Description:</strong></td>
+                <td><%= @movie.description %></td>
+              </tr>
+              <tr>
+                <td><strong>Movie Length:</strong></td>
+                <td><%= @movie.movie_length %></td>
+              </tr>
+              <tr>
+                <td><strong>Director:</strong></td>
+                <td><%= @movie.director %></td>
+              </tr>
+              <tr>
+                <td><strong>Rating:</strong></td>
+                <td><%= @movie.rating %></td>
+              </tr>
             </tbody>
           </table>
           <% if logged_in? %>
-               <%= link_to "Write a Review", new_movie_review_path(@movie), class: "submitButton" %>
+          <%= link_to "Write a Review", new_movie_review_path(@movie), class: "submitButton" %>
           <% end %>
         </div>
       </div>
@@ -40,35 +40,41 @@
         <p><%= @movie.description %></p>
 
         <% if logged_in? and @reviews.blank? %>
-            <h3>No reviews just yet, would you like to add the first?</h3>
-            <%= link_to "Write Review", new_movie_review_path(@movie), class: "btn btn-primary" %>
+        <h3>No reviews just yet, would you like to add the first?</h3>
+        <%= link_to "Write Review", new_movie_review_path(@movie), class: "btn btn-primary" %>
         <% else %>
-            <% @reviews.each do |review| %>
-                <div class="reviews">
-                  <div class="star-rating" data-score= <%= review.rating %></div>
-                    <p><%= review.comment %></p>
-                  </div>
-                </div>
-            <% end %>
-        <% end %>
+        <% @reviews.each do |review| %>
+        <div class="reviews">
+          <div class="star-rating" data-score= <%= review.rating %></div>
+          <p><%= review.comment %></p>
         </div>
       </div>
+      <% end %>
+      <% end %>
     </div>
   </div>
-<div class="links">
-  <% if logged_in? and (@movie.user == current_user) %>
-      <%= link_to 'Edit', edit_movie_path(@movie) %> |
-      <%= link_to 'Delete', movie_path(@movie), method: :delete, data: { confirm: "Are you sure?" } %> |
-  <%end%>
-  <%= link_to 'Back', movies_path %>
-
 </div>
-  <script>
-    $('.star-rating').raty({
-      path: '/assets/',
-      readOnly: true,
-      score: function() {
-        return $(this).attr('data-score');
-      }
-    })
-  </script>
+</div>
+
+<div class="links">
+  <div class="panel panel-default">
+  <div class="panel-heading">Options</div>
+  <% if logged_in? and (@movie.user == current_user) %>
+  <div class="btn-group" role="group" aria-label="...">
+    <%= link_to '  ', edit_movie_path(@movie), class:"glyphicon glyphicon-pencil", style:"color:#000000; padding:30px;"%> 
+    <%= link_to '  ', movie_path(@movie), class:"glyphicon glyphicon-remove", style:"color:#000000; padding:30px;", method: :delete, data: { confirm: "Are you sure?" } %>
+    <%end%>
+    <%= link_to '  ', movies_path, class:"glyphicon glyphicon-arrow-left", style:"color:#000000; padding:30px;" %>
+  </div>
+  </div>
+</div>
+
+<script>
+  $('.star-rating').raty({
+  path: '/assets/',
+  readOnly: true,
+  score: function() {
+  return $(this).attr('data-score');
+}
+})
+</script>
