--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,6 +3,7 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
+<div class="inputField">
   <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true %>
@@ -21,9 +22,14 @@
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
 
+  </div>
+
   <div class="actions">
     <%= f.submit "Sign up" %>
   </div>
+  <br>
 <% end %>
 
+<div class="bigger" style="font-size: 18px;">
 <%= render "devise/shared/links" %>
+</div>
