--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -2,22 +2,29 @@
     <div class="jumbotron">
       <h1>Your Favorite Movies Reviewed</h1>
       <p>Please Sign in or sign up.</p>
-      <p><%= link_to "Sign Up To Write A Review", new_user_registration_path, class: "btn btn-primary btn-lg" %></p>
+      <div class="container fadeInUp animated">
+      <p><%= link_to "Sign Up Now", new_user_registration_path, class: "btn btn-primary btn-lg" %></p>
+      </div>
     </div>
 <% end %>
 
+
 <div class="row">
   <% @movies.each do |movie| %>
+  
       <div class="col-sm-6 col-md-3">
+      <div class="pulse animated">
         <div class="thumbnail">
           <%= link_to (image_tag movie.image.url(:medium), class: 'image'), movie %>
         </div>
+            
         <div class="table-responsive">
           <table class="table">
             <tbody>
               <p><strong>Title:</strong><%= movie.title %></p>
             </tbody>
           </table>
+        </div>
         </div>
       </div>
   <% end %>
