--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -3,14 +3,19 @@
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= devise_error_messages! %>
 
+<div class="inputField">
   <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true %>
   </div>
-
+</div> 
+ 
   <div class="actions">
     <%= f.submit "Send me reset password instructions" %>
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+<br>
+<div class="bigger" style="font-size: 18px;">
+  <%= render "devise/shared/links" %>
+</div>
