--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -56,12 +56,16 @@
     </div>
   </div>
 <div class="links">
+  <div class="panel panel-default">
+  <div class="panel-heading">Options</div>
   <% if logged_in? and (@movie.user == current_user) %>
-      <%= link_to 'Edit', edit_movie_path(@movie) %> |
-      <%= link_to 'Delete', movie_path(@movie), method: :delete, data: { confirm: "Are you sure?" } %> |
-  <%end%>
-  <%= link_to 'Back', movies_path %>
-
+  <div class="btn-group" role="group" aria-label="...">
+    <%= link_to '  ', edit_movie_path(@movie), class:"glyphicon glyphicon-pencil", style:"color:#000000; padding:30px;"%> 
+    <%= link_to '  ', movie_path(@movie), class:"glyphicon glyphicon-remove", style:"color:#000000; padding:30px;", method: :delete, data: { confirm: "Are you sure?" } %>
+    <%end%>
+    <%= link_to '  ', movies_path, class:"glyphicon glyphicon-arrow-left", style:"color:#000000; padding:30px;" %>
+  </div>
+  </div>
 </div>
   <script>
     $('.star-rating').raty({
