Minor panel changes(better on the eye)

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -32,6 +32,13 @@ body {
   font-family: 'Lato', sans-serif;
 }
 
+.panel-custom {
+     background-color: #C9E3E3;  
+}
+
+.panel-heading {
+  color: #000000;
+}
 .review_title {
     margin: 0 0 20px 0;
 }
