--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -30,7 +30,7 @@
 
 <br>
 <div class="bigger" style="font-size: 15px;">
-<div class="panel panel-default" style="padding: 10px;">
+<div class="panel panel-custom" style="padding: 10px;">
     <div class="panel-heading" style="padding: 10px">Options</div>
     <div style="padding: 10px">
     <%= render "devise/shared/links" %>
