--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -56,7 +56,7 @@
     </div>
   </div>
 <div class="links">
-  <div class="panel panel-default">
+  <div class="panel panel-custom">
   <div class="panel-heading">Options</div>
   <% if logged_in? and (@movie.user == current_user) %>
   <div class="btn-group" role="group" aria-label="...">
