--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,4 @@
+<div class="fadeIn animated">
 <h2>Sign up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
@@ -37,4 +38,5 @@
       <%= render "devise/shared/links" %>
     </div>
   </div>
+</div>
 </div>
