--- a/app/views/movies/new.html.erb
+++ b/app/views/movies/new.html.erb
@@ -1,6 +1,8 @@
+<div class="fadeIn animated">
 <h1>New Movie</h1>
 
 <%= render 'form' %>
 <div class="links">
   <%= link_to 'Back', movies_path %>
+</div>
 </div>
