--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="../../assets/stylesheets/bootstrap.css">
 
-<link rel="stylesheet" href="../../assets/stylesheets/animate.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.1/animate.min.css">
 <nav class="navbar navbar-default" role="navigation">
   <div class="container fadeIn animated">
     <div class="container">
