remove white space to avoid crash & open movie in new tab

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -78,7 +78,7 @@ http://i.ytimg.com/vi/ + videoID + /default.jpg -->
 
             <div class="col-xs-5 col-md-4">
               <div class="thumbnail" style="background-color: #C9E3E3; padding-top: 25px;">
-                <a href= <%= suggestion['yUrl'] %>>
+                <a href= <%= suggestion['yUrl'] %>  target="_blank">
                   <img style=" height: 58%; width: 58%" src=<%= 'http://i.ytimg.com/vi/' + suggestion['yID'] + '/default.jpg' %>>
                 </a>
                 <div class="caption" style="font-size:15px"> 
